traefik-ingress/traefik-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.hk.com
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
